--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
 
 destination: ./makesite
 
-production_url: https://Malgeon.github.io/
+production_url: https://Malgeon.github.io
 source_url: https://github.com/Malgeon/makeBlog
 
 safe: False
