--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
 
 # for Travis CI. 
 
-destination: ./makesite
+destination: ../makesite
 
 production_url: https://Malgeon.github.io
 source_url: https://github.com/Malgeon/makeBlog
