--- a/_config.yml
+++ b/_config.yml
@@ -71,10 +71,10 @@ exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
 
 # for Travis CI. 
 
-destination: ../makesite
+destination: ./output
 
-production_url: https://Malgeon.github.io
-source_url: https://github.com/Malgeon/makeBlog
+production_url: https://Malgeon.github.io/
+source_url: https://github.com/Malgeon/makeBlog/
 
 safe: False
 lsi: False
