200914 kotlin codingtest practice

--- a/_data/testTags.yml
+++ b/_data/testTags.yml
@@ -13,8 +13,8 @@
 - name : sort
   url : test/sort
 
-- name : bp
-  url : test/bp
+- name : bf
+  url : test/bf
 
 - name : greedy
   url : test/greedy
